[package]
name = "onet"
version = "0.10.12"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "ONE-T is a performance report bot for the Polkadot and Kusama network with a special focus on the One Thousand validator programme" 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
envy = "0.4"
log = "0.4"
clap = "2.33"
lazy_static = "1.4"
derive_more = "0.99"
async-recursion = "1.0"
serde = "1.0.132"
serde_json = "1.0.68"
thiserror = "^1.0.24"
chrono = "0.4"
regex = "1.4.6"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
url = "2.2.2"
base64 = "0.13.0"
rand = "0.8.5"
flate2 = "1.0"
# api
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-cors = "0.6"
redis = { version = "0.19.0", features = ["async-std-comp"] }
mobc = { version = "0.7", default-features = false, features = ["async-std"] }
mobc-redis = { version = "0.7", default-features = false, features = ["async-std-comp"] }

# subxt dependencies
subxt = "0.24.0"

async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
