[package]
name = "onet"
version = "0.30.1"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "ONE-T is a performance report bot for the Polkadot and Kusama network with a special focus on the One Thousand validator programme" 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
envy = "0.4"
log = "0.4"
clap = "2.33"
lazy_static = "1.4"
derive_more = "0.99"
async-recursion = "1.0"
serde = "1.0.132"
serde_json = "1.0.68"
thiserror = "^1.0.24"
chrono = "0.4"
regex = "1.4.6"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
url = "2.2.2"
base64 = "0.13.1"
rand = "0.8.5"
flate2 = "1.0"
# api
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-cors = "0.6"
redis = { version = "0.19.0", features = ["async-std-comp"] }
mobc = { version = "0.7", default-features = false, features = ["async-std"] }
mobc-redis = { version = "0.7", default-features = false, features = ["async-std-comp"] }
ctrlc = { version = "3.0", features = ["termination"] }

# Subxt crates:
subxt = { version = "0.38.0", features = ["substrate-compat", "native", "reconnecting-rpc-client"] }
subxt-signer = { version = "0.38.0", features = ["subxt"] }
sp-core-hashing = "16.0.0"
#
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
# p2p-explorer
multiaddr = "0.18.1"
libp2p = "0.52.0"
subp2p-explorer-cli = { git = "https://github.com/turboflakes/subp2p-explorer", branch="main"}
subp2p-explorer = { git = "https://github.com/turboflakes/subp2p-explorer", branch="main"}